--- a/Celtics/Celtics.css
+++ b/Celtics/Celtics.css
@@ -1,6 +1,6 @@
 
 h1 {
-  font-size: 225%;
+  font-size: 300%;
   text-align:center
 }
 p {
@@ -16,4 +16,19 @@ p {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+}
+
+a:link {
+  color: Black;
+  background-color: transparent;
+  text-decoration: underline;
+  font-family: courier;
+  font-size: 200%;
+}
+a:visited {
+  color: Black;
+  background-color: transparent;
+  text-decoration: underline;
+  font-family: courier;
+  font-size: 200%;
 }
